[package]
name = "regcmp"
version = "0.1.0"
edition = "2024"
description = "比较两个形式正则表达式是否等价（形式语言与自动机课程）"
license = "MIT"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
logos = "0.16.1"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = "s"
panic = "abort"
